# sudoku-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/: renovate.json
.github/workflows/: bench.yml  ci.yml  lint.yml  release-drafter.yml  test.yml
benches/: sudoku_benchmarks.rs
src/: main.rs  sudoku.rs
styles/: main.css
templates/layout/: footer.html  table.html
templates/pages/: index.html
