[package]
name = "sudoku-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.20.0"
actix-web = "4.9.0"
actix-files = "0.6.6"
lazy_static = "1.5.0"
actix-rt = "2.10.0"
fastrand = "2.1.1"

[dev-dependencies]
cargo-tarpaulin = "0.31.2"
codspeed-criterion-compat = "2.7.2"
criterion2 = "1.1.1"

[lib]
name = "sudoku_rust"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
opt-level = "s"

[[bench]]
name = "sudoku_benchmarks"
harness = false
