[package]
name = "sudoku-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.20.0"
actix-web = "4.11.0"
actix-files = "0.6.6"
lazy_static = "1.5.0"
actix-rt = "2.10.0"
fastrand = "2.3.0"

[dev-dependencies]
cargo-tarpaulin = "0.32.8"
codspeed-criterion-compat = "3.0.5"
criterion2 = "3.0.1"

[lib]
name = "sudoku_rust"
path = "src/main.rs"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false # Set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust

[profile.release-with-debug]
inherits = "release"
strip = false # Keep debug information in binary
debug = true # Include maximum amount of debug information

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[[bench]]
name = "sudoku_benchmarks"
harness = false
